# acat

./: Cargo.toml  Makefile  PKGBUILD  README.md
src/: clap_app.rs  main.rs
