[package]
name = "acat"
version = "0.1.1"
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
edition = "2018"
licence="GPL-3.0-or-later"
description="Like lolcat, but more chaotic"
maintenance="actively-developed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
