[package]
name = "acat"
version = "0.1.2"
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
edition = "2018"
license="GPL-3.0-or-later"
description="Like lolcat, but more chaotic. Not feature-complete yet."
maintenance="actively-developed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
clap = "2.33.1"
random_color = "0.4.4"
